# transformer-cpp

./: .gitignore  CMakeLists.txt  dataplay.cpp  fetch_log.txt  findsqrt.cpp  gpt2_logit_lens.py  helpers.cpp  helpers.h  helpers_eigen.h  input.cpp  matrixlin.cpp  matrixlin.h  notepad.txt  processdata.py  samples.txt  thoughts.md  transformer.h  transformer_init.cpp  transformer_load.cpp  transformer_save.cpp  transformer_train.cpp  transformer_weight_storage.cpp  xgboost.cpp  xgboost.h
projectdump/: main.cpp  test.cpp  test.h
